--- a/budgetee-client/src/index.css
+++ b/budgetee-client/src/index.css
@@ -15,3 +15,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.no-scrollbar::--webkit-scrollbar {
+  display: none;
+}
+
+.no-scrollbar {
+  -ms-overflow-style: none; /* IE, MS Edge */
+  scrollbar-width: thin;  /* Firefox */
+}
